# prisma

./: .gitattributes  .gitignore  Cargo.toml  build.rs  flake.nix  output.exr.REMOVED.git-id
.zed/: tasks.json
docs/: README.md
models/: dragon.obj.REMOVED.git-id  lucy.obj.REMOVED.git-id
scenes/: SciFiHelmet.glb  SciFiHelmet.glb.REMOVED.git-id  damaged_helmet.glb.REMOVED.git-id
shaders/: copy.wgsl  materials.wgsl  render.wgsl
src/: lib.rs  main.rs  materials.rs  primitives.rs  render.rs  scene.rs  textures.rs  window.rs
src/render/: copy_to_screen.rs  post_processor.rs  render_context.rs  renderer.rs
src/scene/: camera.rs
src/textures/: texture.rs  texture_hdr.rs
textures/: indoor.hdr.REMOVED.git-id  panorama.hdr.REMOVED.git-id
