[package]
name = "prisma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
divrem = "1.0.0"
encase = { version = "0.9.0", features = ["glam"] }
env_logger = "0.11.5"
glam = "0.28.0"
gltf = "1.4.1"
image = "0.25.2"
indicatif = "0.17.8"
itertools = "0.13.0"
log = "0.4.27"
parking_lot = "0.12.4"
pollster = "0.3.0"
poster = "0.3.1"
tracing-subscriber = "0.3.19"
wgpu = "25.0.2"
winit = "0.30.11"
